fix gap .project

--- a/src/style/gallery.css
+++ b/src/style/gallery.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 3rem;
+    gap: 2rem;
     padding: 3rem;
     margin: 0 auto;
     background-color: #f8f8f8;
